; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/postmaster/extr_pgstat.c_pgstat_fetch_stat_tabentry.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/postmaster/extr_pgstat.c_pgstat_fetch_stat_tabentry.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32* }

@MyDatabaseId = common dso_local global i64 0, align 8
@pgStatDBHash = common dso_local global i32* null, align 8
@HASH_FIND = common dso_local global i32 0, align 4
@InvalidOid = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @pgstat_fetch_stat_tabentry(i64 %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.TYPE_2__*, align 8
  %6 = alloca i32*, align 8
  store i64 %0, i64* %3, align 8
  %7 = call i32 (...) @backend_read_statsfile()
  %8 = load i64, i64* @MyDatabaseId, align 8
  store i64 %8, i64* %4, align 8
  %9 = load i32*, i32** @pgStatDBHash, align 8
  %10 = bitcast i64* %4 to i8*
  %11 = load i32, i32* @HASH_FIND, align 4
  %12 = call i64 @hash_search(i32* %9, i8* %10, i32 %11, i32* null)
  %13 = inttoptr i64 %12 to %struct.TYPE_2__*
  store %struct.TYPE_2__* %13, %struct.TYPE_2__** %5, align 8
  %14 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %15 = icmp ne %struct.TYPE_2__* %14, null
  br i1 %15, label %16, label %34

16:                                               ; preds = %1
  %17 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i32 0, i32 0
  %19 = load i32*, i32** %18, align 8
  %20 = icmp ne i32* %19, null
  br i1 %20, label %21, label %34

21:                                               ; preds = %16
  %22 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %23 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %22, i32 0, i32 0
  %24 = load i32*, i32** %23, align 8
  %25 = bitcast i64* %3 to i8*
  %26 = load i32, i32* @HASH_FIND, align 4
  %27 = call i64 @hash_search(i32* %24, i8* %25, i32 %26, i32* null)
  %28 = inttoptr i64 %27 to i32*
  store i32* %28, i32** %6, align 8
  %29 = load i32*, i32** %6, align 8
  %30 = icmp ne i32* %29, null
  br i1 %30, label %31, label %33

31:                                               ; preds = %21
  %32 = load i32*, i32** %6, align 8
  store i32* %32, i32** %2, align 8
  br label %62

33:                                               ; preds = %21
  br label %34

34:                                               ; preds = %33, %16, %1
  %35 = load i64, i64* @InvalidOid, align 8
  store i64 %35, i64* %4, align 8
  %36 = load i32*, i32** @pgStatDBHash, align 8
  %37 = bitcast i64* %4 to i8*
  %38 = load i32, i32* @HASH_FIND, align 4
  %39 = call i64 @hash_search(i32* %36, i8* %37, i32 %38, i32* null)
  %40 = inttoptr i64 %39 to %struct.TYPE_2__*
  store %struct.TYPE_2__* %40, %struct.TYPE_2__** %5, align 8
  %41 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %42 = icmp ne %struct.TYPE_2__* %41, null
  br i1 %42, label %43, label %61

43:                                               ; preds = %34
  %44 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %45 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %44, i32 0, i32 0
  %46 = load i32*, i32** %45, align 8
  %47 = icmp ne i32* %46, null
  br i1 %47, label %48, label %61

48:                                               ; preds = %43
  %49 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %50 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %49, i32 0, i32 0
  %51 = load i32*, i32** %50, align 8
  %52 = bitcast i64* %3 to i8*
  %53 = load i32, i32* @HASH_FIND, align 4
  %54 = call i64 @hash_search(i32* %51, i8* %52, i32 %53, i32* null)
  %55 = inttoptr i64 %54 to i32*
  store i32* %55, i32** %6, align 8
  %56 = load i32*, i32** %6, align 8
  %57 = icmp ne i32* %56, null
  br i1 %57, label %58, label %60

58:                                               ; preds = %48
  %59 = load i32*, i32** %6, align 8
  store i32* %59, i32** %2, align 8
  br label %62

60:                                               ; preds = %48
  br label %61

61:                                               ; preds = %60, %43, %34
  store i32* null, i32** %2, align 8
  br label %62

62:                                               ; preds = %61, %58, %31
  %63 = load i32*, i32** %2, align 8
  ret i32* %63
}

declare dso_local i32 @backend_read_statsfile(...) #1

declare dso_local i64 @hash_search(i32*, i8*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
